# StockViewer

./: .CMakeLists.txt.swp  CMakeLists.txt
include/: Engine.hpp  Formatter.hpp  Interval.hpp  utilities.hpp  yfapi.hpp
include/Server/: RestServer.hpp
src/: main.cpp
src/Server/: RestServer.cpp
